--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ serde_json = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tracing-appender = "0.2"
+jsonwebtoken = "9.3.1"
+actix-web-httpauth = "0.8.2"
