--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.10.2"
-sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "uuid", "chrono"] }
+sqlx = { version = "0.8.3", features = ["mysql", "runtime-tokio-native-tls", "uuid", "chrono", "macros"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -14,3 +14,5 @@ tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
 tracing-appender = "0.2"
 jsonwebtoken = "9.3.1"
 actix-web-httpauth = "0.8.2"
+argon2 = "0.5"
+rand = "0.9.1"
